--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<title>RSS Feed</title>
 	<script src='rss.js' defer></script>
 	<link rel='stylesheet' href='style.css'>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<h1>RSS Reader (JavaScript)</h1>
 	<output>Loading...</output>
 	<template>
 		<h2></h2>
