--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>RSS Feed</title>
-	<script src='rss.js' defer></script>
+	<title>Local News</title>
+	<script src='js/rss.js' defer></script>
 	<link rel='stylesheet' href='style.css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
