--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Local News</title>
 	<script src='js/rss.js' defer></script>
-	<link rel='stylesheet' href='style.css'>
+	<link rel='stylesheet' href='css/style.css'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
