--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
+    <link rel="manifest" href="/manifest.json">
+
     <script src='js/jquery-3.3.1.min.js'></script>
     <script src='js/jsrender.min.js'></script>
     <script src='js/anynews.js'></script>
@@ -35,17 +37,19 @@
         <div class="header">
             <h1 id="site-title" class="brand-title">The News</h1>
             <h2 id="site-description" class="brand-tagline">Direct to you!</h2>
+	    
 
             <nav class="nav">
                 <ul class="nav-list">
-<!--
                     <li class="nav-item">
-                        <a class="pure-button" href="http://purecss.io">Pure</a>
+                        <a class="pure-button" href="#" onClick="loadFeed('feed/rfa/index.xml','#post-template')">RFA News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="pure-button" href="http://yuilibrary.com">YUI Library</a>
+                        <a class="pure-button" href="#" onClick="loadFeed('feed/tibet/rss2.xml','#post-template')">Tibetan News</a>
                     </li>
--->
+                    <li class="nav-item">
+                        <a class="pure-button" href="#" onClick="loadFeed('feed/uyghur/rss2.xml','#post-template')">Uyghur News</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -55,7 +59,7 @@
         <div>
 
             <div class="posts" id="output">
-                <h1 class="content-subhead">Recent Posts</h1>
+                <h1 class="content-subhead">Latest News</h1>
 
   <script id="post-template" type="text/x-jsrender">
 
@@ -104,9 +108,7 @@
 
 
 <script>
-loadFeed('feed/rfa/index.xml','post-template')
-//loadFeed('feed/tibet/rss2.xml','post-template')
-//loadFeed('feed/uyghur/rss2.xml','post-template')
+loadFeed('feed/rfa/index.xml','#post-template')
 </script>
 
 </body>
