--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <script src='js/jquery-3.3.1.min.js'></script>
-  <script src="https://www.jsviews.com/download/jsrender.js"></script>
+  <script src='js/jsrender.min.js'></script>
     <script src='js/anynews.js'></script>
 
     <title>The News</title>
