updates for navigation

--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
                     </li>
                 </ul>
             </nav>
+		<div id="add-app" style="display:none;margin:10px">
+		<a class="pure-button" href="#" onClick="showAddAppPrompt()">Activate App Mode</a>
+		</div>
         </div>
     </div>
 
     <div class="content pure-u-1 pure-u-md-3-4">
         <div>
 
-            <div class="posts">
+            <div class="posts" id="latest-news">
                 <h1 class="content-subhead">Latest News</h1>
 		<div id="output"></div>
             </div>
